# RibbonFilter

./: CMakeLists.txt  README.md  library.h
ribbon-invoke/: org_apache_hadoop_hbase_util_RibbonHelper.cpp  org_apache_hadoop_hbase_util_RibbonHelper.h  org_example_JNIAdvancedDemo.h  ribbon_demo.h  ribbon_native_invoke_demo.cc  ribbon_native_invoke_simple_demo.cc
ribbon-lib/: coding.h  coding_lean.h  fastrange.h  hash.cc  hash.h  hash128.h  math.h  math128.h  ribbon_alg.h  ribbon_config.h  ribbon_impl.h  ribbon_test.h  slice.h
ribbon-lib/port/: port_posix.h
ribbon-lib/rocksdb/: slice.h
ribbon-lib/util/: coding.h  coding_lean.h  hash.cc  hash.h  hash128.h  ribbon_alg.h  ribbon_config.cc  ribbon_impl.h  ribbon_test.cc  ribbon_test.h
